--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -1,17 +1,25 @@
 @charset "UTF-8"
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Maiden+Orange&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 
 
 
     
     :root {
-        --cor1: #ddbda3
-        --cor2: #9b423f
-        --cor3: #5e5d5d
-        --cor4: #5e5d5d
+        --cor1: #ddbda3;
+        --cor2: #9b423f;
+        --cor3: #5e5d5d;
+        
 
-        --fontdestaque: MaidenOrange-Regular.ttf
-        --fontparagrafo:
+        --fonte1: "Maiden Orange", serif;
+        --fonte2: "Bebas Neue", sans-serif;
+        --fonte3: "verdana, geneva, tahoma, sans-serif";
+        --fonte4: "Zilla Slab", serif;
                
 
     }
@@ -33,10 +41,11 @@ header {
 
 header > h1 {
     color:#e5d2c4;
+    font-family:var(--fonte1);
     padding-top: 50px;
     font-variant: small-caps;
     text-align: center;
-    font-size: 50px;
+    font-size: 5vw;
 
 }
 
@@ -66,6 +75,8 @@ div:hover {
 }
 
 section {
+    font-family: var(--fonte4);
+    font-size: 2em;
     padding-top: 10%;
     padding-bottom: 10%;
     line-height: 2em;
@@ -84,9 +95,12 @@ section.efeitofundo {
     color: #38302b;
 }
 
-section.normal > p {
-    width: 400px;
+section.normal, > p {
     background-color: #9b423f94;
+    
+    padding-left: 30px;
+    width: 400px;
+    
 }
 
 a {
